--- a/homework2/exercise7/style.css
+++ b/homework2/exercise7/style.css
@@ -2,10 +2,10 @@ p:first-child {
 	color: red;
 }
 
-p:only-child {
+div p:only-child {
 	color: white;
 }
-div:only-of-type {
+div p:only-of-type {
 	background-color: blue;
 }
 p:last-child {
