--- a/shop-internet/assets/css/style.css
+++ b/shop-internet/assets/css/style.css
@@ -84,6 +84,7 @@ nav .menu li:hover a{
 	border-radius: 20px;
 
 transform: scale(1.3) skew(20deg, 0deg);
+
 }
 .aside a{
 	
@@ -93,7 +94,7 @@ transform: scale(1.3) skew(20deg, 0deg);
 
 }
  .text{
-	display: none;
+	opacity: 0;
 	 overflow: hidden;
 	 margin:0 auto ;
 	margin-top: 10px;
@@ -103,6 +104,11 @@ transform: scale(1.3) skew(20deg, 0deg);
 	background: black;
 	color:white;
 	box-shadow: -28px -16px 20px purple, 23px 15px 16px yellow;
+	transition:4s;
+	position: absolute;
+	left: -400px; 
+	
+	
 
 }
 .text p{
@@ -110,10 +116,12 @@ transform: scale(1.3) skew(20deg, 0deg);
 }
 .aside a:hover {
 	color: #000000;
-	display: block;
 }
 .aside a:hover + .text{
-	display: block;
+	opacity: 1;
+	position: relative;
+	left: 0;
+	
 }
 @media(min-width:768px) and (max-width: 1023px){
 	.aside{
