--- a/shop-internet/assets/css/style.css
+++ b/shop-internet/assets/css/style.css
@@ -73,7 +73,7 @@ nav .menu li:hover a{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 15%;
+	width: 20%;
 	/*height: 79vh;*/
 	background: rgba(220, 220, 220, 0.4);
 	position: absolute;
@@ -107,9 +107,6 @@ transform: scale(1.3) skew(20deg, 0deg);
 	transition:4s;
 	position: absolute;
 	left: -400px; 
-	
-	
-
 }
 .text p{
 	text-align: center;
@@ -138,11 +135,14 @@ transform: scale(1.3) skew(20deg, 0deg);
 	}
 }
 @media(min-width:1024px) and (max-width: 1279px){
+	.aside{
+		width: 21%;
+	}
 	.text{
-		width: 200px;
+		width: 70%;
 	}
 	.aside a{
-		font-size: 35px;
+		font-size: 30px;
 	}
 }
 main{
